# AI-Robotics

navigation/: CMakeLists.txt  SimpleGlobalPlanner.xml  package.xml  plugin.xml
navigation/include/: straight_line_planner.hpp
navigation/src/: astar_planner.cpp  occupancy_grid.cpp  straight_line_planner.cpp  waypoint_follower.cpp
nodes/: CMakeLists.txt  package.xml
nodes/src/: laser_publisher.cpp  publisher.cpp  subscriber.cpp  test.cpp
