<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation</name>
  <version>0.0.1</version>
  <description>A ROS2 package for publishing occupancy grid data.</description>

  <maintainer email="jordon@todo.todo">Jordon</maintainer>
  <license>Apache-2.0</license>  <!-- Replace with the correct license if needed -->

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Primary dependencies (build, export, and runtime) -->
  <build_depend>rclcpp</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_depend>nav_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>nav2_core</build_depend>
  <build_export_depend>nav2_core</build_export_depend>
  <exec_depend>nav2_core</exec_depend>

  <build_depend>pluginlib</build_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <exec_depend>pluginlib</exec_depend>

  <build_depend>tf2_ros</build_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>tf2_ros</exec_depend>

  <build_depend>rclcpp_action</build_depend>
  <build_export_depend>rclcpp_action</build_export_depend>
  <exec_depend>rclcpp_action</exec_depend>

  <build_depend>rclcpp_lifecycle</build_depend>
  <build_export_depend>rclcpp_lifecycle</build_export_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <build_depend>nav2_util</build_depend>
  <build_export_depend>nav2_util</build_export_depend>
  <exec_depend>nav2_util</exec_depend>

  <build_depend>nav2_msgs</build_depend>
  <build_export_depend>nav2_msgs</build_export_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_export_depend>builtin_interfaces</build_export_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <build_depend>nav2_costmap_2d</build_depend>
  <build_export_depend>nav2_costmap_2d</build_export_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
